[project]
name = "skywindow"
version = "0.1.0"
description = "Tooling for rendering a sky sphere through a virtual window."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
