[project]
name = "skywindow"
version = "0.1.0"
description = "Tooling for rendering a sky sphere through a virtual window."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.9.0",
]

[project.scripts]
window = "window:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "window.py",
]

[tool.hatch.build.targets.sdist]
include = [
    "LICENSE.md",
    "README.md",
    "window.py",
]

[tool.uv]
package = true
